index on master: 694cf49 fix topics overflow issue

--- a/src/app/pharos-dashboard/data-types-panel/data-types-panel.component.scss
+++ b/src/app/pharos-dashboard/data-types-panel/data-types-panel.component.scss
@@ -47,6 +47,10 @@
   max-width: 168px;
 }
 
+.publications-header {
+  font-size: .8em;
+}
+
 @media only screen and (max-width: 960px) {
   .types-grid-list {
     grid-template-columns: repeat(auto-fit, minmax(30%, 1fr));
